[gd_scene load_steps=6 format=2]

[ext_resource path="res://paths/path_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/man_v2/man_v2.gd" type="Script" id=2]
[ext_resource path="res://models/man_v2/man_anim_v2_g1.tscn" type="PackedScene" id=3]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="CapsuleShape" id=2]
radius = 1.35052
height = 4.6114

[node name="man_v2" type="Spatial"]
script = ExtResource( 2 )

[node name="path_container" parent="." instance=ExtResource( 1 )]

[node name="actual_path" type="Path" parent="."]
curve = SubResource( 1 )

[node name="follower" type="PathFollow" parent="actual_path"]

[node name="Area" type="Area" parent="actual_path/follower"]

[node name="CollisionShape" type="CollisionShape" parent="actual_path/follower/Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.38477, 0 )
shape = SubResource( 2 )

[node name="man_anim_v2" parent="actual_path/follower/Area" instance=ExtResource( 3 )]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="actual_path/follower/Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
